write introduction and include first 20 pages of Klaas' comments

--- a/DAQTrig.tex
+++ b/DAQTrig.tex
@@ -29,7 +29,9 @@ The HLT software is run on a dedicated computing element, the Event Filter Farm,
 
 The most important signal and control samples are collected with dilepton triggers. In general, they select events that contain two leptons (electrons or muons), of which one is required to have a reconstructed transverse momentum \pt of at least $\unit{17}{\giga\electronvolt}$, while for the second this is relaxed to $\unit{8}{\giga\electronvolt}$. In general, the lepton with the higher (lower) \pt is referred to as the leading (trailing) lepton. While the algorithms employed to reconstruct muons and electrons are the same among all possible combinations of leptons, the triggers used for preselection at L1 level differ in their thresholds~\cite{HLTConfigBrowser}. The dielectron HLT is based on the so called L1 seed \verb+L1_DoubleEG_13_7+ and the dimuon on an logical OR of \verb+	L1_DoubleMu_10_Open+ and \verb+L1_DoubleMu_10_3p5+. To select events with an electron and a muon, two HLTs are employed, one with the electron and one with the muon as the leading lepton. The L1 seeds are a logical OR of \verb+L1_Mu3p5_EG12+ and \verb+L1_MuOpen_EG12+, and \verb+L1_Mu12_EG7+, respectively. The numbers refer to the \pt or \Et thresholds of the muon and e/$\gamma$ candidates in GeV, while \verb+Open+ indicates a threshold of $\unit{0}{\giga\electronvolt}$. As the algorithms to reconstruct physics objects at HLT level are so similar to those used offline, no dedicated description is given here.
 
-Other HLT paths used in this analysis select events based on the scalar sum of the \pt of hadronic jets (\HT), the $\alpha_{\mathrm{T}}$ variable, which takes into account jets and \MET~\cite{Khachatryan2011196}, and single electrons and muons, which are selected with tighter identification and isolation criteria compared to the dilepton triggers. Also, in order to study non-prompt leptons, events with low \pt single leptons are selected using trigger paths that apply the same selection as the trailing legs of the dilepton triggers. As the trigger rates for these events are very high, the triggers are prescaled, meaning that only a fraction of the selected events are actually recorded.
+Other HLT paths used in this analysis select events based on the scalar sum of the \pt of hadronic jets (\HT), the $\alpha_{\mathrm{T}}$ variable, which takes into account jets and \MET~\cite{Khachatryan2011196}, and single electrons and muons, which are selected with tighter identification and isolation criteria compared to the dilepton triggers. Also, in order to study non-prompt leptons, events with low \pt single leptons are selected using trigger paths that apply the same selection as the trailing legs of the dilepton triggers. 
+
+As the trigger rates for the \HT, $\alpha_{\mathrm{T}}$, and low \pt lepton triggers are very high, the triggers are prescaled, meaning that only a fraction of the selected events are actually recorded and reconstructed.
 
   
 
