--- a/LHC.tex
+++ b/LHC.tex
@@ -1,6 +1,6 @@
 The Large Hadron Collider (LHC)~\cite{LHC}, located at CERN near Geneva and stretching far into the french countryside, is capable of colliding protons and lead ions at higher energies than any of its predecessors. The instantaneous luminosity delivered to the experiments exceeds that of any previous machine at the energy frontier. It was constructed in the tunnel formerly inhabited by the LEP electron-positron collider in $\unit{100}{\meter}$ depths below the surface with a circumference $\unit{27}{\kilo\meter}$. The design goal was to achieve proton collisions at a centre-of-mass energy of $\sqrt{s} = \unit{14}{\tera\electronvolt}$ with instantaneous luminosities of $\unit{10^{34}}{\reciprocal\second\meter\rpsquared}$. 
 
-The LHC consists of eight arcs, as shown in Figure~\ref{fig:LHC}, where superconducting dipole magnets provide a magnetic field of up to $\unit{8.3}{\tesla}$ to bend the charged particles along the curvature of the tunnel, while quadrupole and other specialised magnets are used to focus the beams. In straight segments between these arcs, LHC infrastructure and the experiments are located. The infrastructure components include the cooling facilities necessary to reach a temperature of $\unit{1.9}{\kelvin}$ around the ring, the superconducting cavities in which the protons are accelerated by standing electromagnetic waves, collimators for beam cleaning and the beam dump, where the beams are ejected from the LHC at the end of fills. In the other four straight segments the beam is brought into collisions, which are studied by the four large experiments at the LHC. Of these, CMS~\cite{CMS} and ATLAS~\cite{ATLAS} are multi-purpose detectors with a diverse physics program, while ALICE~\cite{ATLAS} and LHCb~\cite{LHCb} are more narrowly focused on heavy ion collisions and flavour physics, respectively. 
+The LHC consists of eight arcs, as shown in Figure~\ref{fig:LHC}, where superconducting dipole magnets provide a magnetic field of up to $\unit{8.3}{\tesla}$ to bend the charged particles along the curvature of the tunnel, while quadrupole and other specialised magnets are used to focus the beams. In straight segments between these arcs, LHC infrastructure and the experiments are located. The infrastructure components include the cooling facilities necessary to reach a temperature of $\unit{1.9}{\kelvin}$ around the ring, the superconducting cavities in which the protons are accelerated by standing electromagnetic waves, collimators for beam cleaning and the beam dump, where the beams are ejected from the LHC at the end of fills. In the other four straight segments the beam is brought into collisions, which are studied by the four large experiments at the LHC. Of these, CMS~\cite{CMS} and ATLAS~\cite{ATLAS} are multi-purpose detectors with a diverse physics program, while ALICE~\cite{ALICE} and LHCb~\cite{LHCb} are more narrowly focused on heavy ion collisions and flavour physics, respectively. 
 
 \begin{figure}[htbp]
 \centering
