--- a/thesis.tex
+++ b/thesis.tex
@@ -247,7 +247,7 @@
 %
 \pagenumbering{arabic}
 \chapter{Introduction}
-%\input{intro}
+\input{intro}
 \chapter{The Standard Model and Supersymmetry}
 \input{theory}
 \chapter{Experimental setup}
@@ -283,7 +283,7 @@
 \input{appendixRmue}
 \input{appendixRT}
 %\bibliographystyle{abbrv}
-\bibliographystyle{unsrt}
+\bibliographystyle{lucas_unsrt}
 \bibliography{thesis.bib}
 %\input{Literature}
 
