--- a/background.tex
+++ b/background.tex
@@ -1,21 +1,24 @@
-As indicated in Figure~\ref{fig:sigRegionBG}, different Standard Model processes contribute to the event sample in the signal region. To distinguish a potential signal from these backgrounds, a precise estimation of the background contributions is mandatory. While the simulation of these processes and the response of the CMS detector gives a good description of the data for the majority of the phase space, a large number of uncertainty sources are introduced in the modelling of the physical process and the detector. Therefore a higher precision can be achieved by deriving the background estimates directly from the recorded data. The background processes are categorized as either being flavour-symmetric or as containing the production of a Z boson. The latter ones well be summarized as ``Drell--Yan'' backgrounds in the following. A dedicated method is applied for each of the two categories.
+\label{sec:backgrounds}
+As indicated in Figure~\ref{fig:sigRegionBG}, different Standard Model processes contribute to the event sample in the signal region. To distinguish a potential signal from these backgrounds, a precise estimation of the background contributions is mandatory. While the simulation of these processes and the response of the CMS detector gives a good description of the data for the majority of the phase space, a large number of uncertainty sources are introduced in the modelling of the physical process and the detector. Therefore a higher precision can be achieved by deriving the background estimates directly from the recorded data. The background processes are categorized as either being flavour-symmetric or as containing the correlated production of a SF lepton pair in decay $\text{Z}/\gamma^{\star}\rightarrow \ell\ell$. The latter will be summarized as ``Drell--Yan'' backgrounds in the following. A dedicated method is applied for each of the two categories.
 
 \section{Flavour-symmetric backgrounds}
-Processes that are symmetric in the production of same-flavour (SF) and opposite-flavour (OF) lepton pairs allow for the estimation of their contribution to the SF event sample from the OF one. The most dominant of these processes is the dileptonic decay of top-pair production, where the leptons are produced uncorrelatedly in the decay of the W bosons. Other examples are the decays of two $\tau$ leptons, which are in turn produced in the decay of a Z boson or the dileptonic decay of W pairs. Another contribution to this class of backgrounds are misidentified leptons, as will be demonstrated later. 
+Processes that are symmetric in the production of SF and OF lepton pairs allow for the estimation of their contribution to the SF event sample from the OF one. The most dominant of these processes is the dileptonic decay of top-pair production, where the leptons are produced uncorrelatedly in the decay of the W bosons. Other examples are the decays such as $\text{Z}\rightarrow \tau\tau \rightarrow \ell\nu\ell\nu$ or $\text{WW}\rightarrow\ell\nu\ell\nu$. Another contribution to this class of backgrounds are misidentified leptons, as will be demonstrated later. 
 
-No significant deviation from flavour-symmetry has been observed in the decays of the W boson, with a measured ratio of the branching fractions into $e+\nu$ and $\mu + \nu$ of $1.007\pm0.021$~\cite{PDG}. In the decays of the $\tau$ lepton the different masses of electron and muon have a noticeable effect, resulting in a slightly favoured decay into electrons. Here the ratio of branching fractions is $1.0241\pm0.0032$~\cite{PDG}. As backgrounds with $\tau$ leptons are a sub-dominant contribution to the the flavour-symmetric backgrounds, these can be considered to be fully flavour-symmetric on particle level. However, distortions of the flavour-symmetry are introduced by the different efficiencies for triggering, reconstructing, and identifying electrons and muons in CMS. The background estimation from OF events therefore has to include a correction for this deviation, which is applied as a multiplicative factor:
+No significant deviation from flavour-symmetry has been observed in the decays of the W boson, with a measured ratio of the branching fractions into $e+\nu$ and $\mu + \nu$ of $\frac{BF(\text{W}\rightarrow e\nu)}{BF(\text{W}\rightarrow \mu\nu)} = 1.007\pm0.021$~\cite{PDG}. In the decays of the $\tau$ lepton the different masses of electron and muon have a noticeable effect, resulting in a slightly favoured decay into electrons with ratio of branching fractions of  $\frac{BF(\text{W}\rightarrow e\nu)}{BF(\text{W}\rightarrow \mu\nu)} = 1.0241\pm0.0032$~\cite{PDG}. As backgrounds with $\tau$ leptons are a sub-dominant contribution to the the flavour-symmetric backgrounds, these can be considered to be fully flavour-symmetric on particle level. 
+
+However, distortions of the flavour-symmetry are introduced by the different efficiencies for triggering, reconstructing, and identifying electrons and muons in CMS. The background estimation from OF events therefore has to include a correction for this deviation, which is applied as a multiplicative factor:
 \begin{equation}
 N_{SF}^{pred} = \Rsfof \cdot N_{OF}.
 \end{equation}
 Similarly, the factors \Reeof and \Rmmof are used to derive separate background estimates for the \EE and \MM channels. Two independent methods are utilized to measure \Rsfof on data. In the first approach it is directly measured as the ratio of SF to OF events in the control region for flavour-symmetric backgrounds. The second approach studies the lepton efficiencies and derives \Rsfof factorized into the effects of trigger efficiencies and reconstruction and identification efficiencies.  
 
 \subsection{Direct measurement of \Rsfof}
-The ratio of SF to OF events as a function of \mll in simulation is shown in Figure~\ref{fig:controlRatioMC}, separately for the central and forward lepton selection. The ratio is very close to one and independent of \mll, except at the \Z peak. It can be concluded that an universal factor can be applied for flavour-symmetric backgrounds over the full mass range. To exclude the \Z peak from the calculation only events in the mass regions $\unit{20}{\giga\electronvolt}< \mll < \unit{70}{\giga\electronvolt}$ and $\mll > \unit{120}{\giga\electronvolt}$ are considered.   	
+The ratio of SF to OF events as a function of \mll in simulation is shown in Figure~\ref{fig:controlRatioMC}, separately for the central and forward lepton selection. The ratio is very close to one and independent of \mll, except at the \Z boson peak, where a significant Drell--Yan contribution spoils the SF-OF symmetry. It can be concluded that an universal factor can be applied for flavour-symmetric backgrounds over the full mass range. To exclude the \Z boson peak from the calculation only events in the mass regions $\unit{20}{\giga\electronvolt}< \mll < \unit{70}{\giga\electronvolt}$ and $\mll > \unit{120}{\giga\electronvolt}$ are considered.   	
 \begin{figure}
 \begin{center}
 \includegraphics[scale=0.4]{plots/BG/control/rSFOF_ControlCentral_Full2012_Mll_None_MC.pdf}\\
 \includegraphics[scale=0.4]{plots/BG/control/rSFOF_ControlForward_Full2012_Mll_None_MC.pdf}
-\caption{Ratio of SF to OF events as a function of \mll in the $t\bar{t}$ control region in simulation. Shown are the results for the central (top) and forward (bottom) lepton selection.}
+\caption{Ratio of SF to OF events as a function of \mll in the $t\bar{t}$ control region in simulation. All contributing background processes have been considered. Shown are the results for the central (top) and forward (bottom) lepton selection. The black vertical lines indicate the upper boundary of the low-mass region and the lower boundary of the high-mass region.}
 \label{fig:controlRatioMC}
 \end{center}
 \end{figure}
@@ -24,17 +27,17 @@ The observed ratio on data as a functions of \mll is shown in Figure~\ref{fig:co
 \begin{center}
 \includegraphics[scale=0.4]{plots/BG/control/rSFOF_ControlCentral_Full2012_Mll_None.pdf}\\
 \includegraphics[scale=0.4]{plots/BG/control/rSFOF_ControlForward_Full2012_Mll_None.pdf}
-\caption{Ratio of SF to OF events as a function of \mll in the $t\bar{t}$ control region in data. Shown are the results for the central (top) and forward (bottom) lepton selection.}
+\caption{Ratio of SF to OF events as a function of \mll in the $t\bar{t}$ control region in data. Shown are the results for the central (top) and forward (bottom) lepton selection. The black vertical lines indicate the upper boundary of the low-mass region and the lower boundary of the high-mass region.}
 \label{fig:controlRatio}
 \end{center}
 \end{figure}
-The numerical results are summarized in Table~\ref{tab:rSFOF} for \Rsfof as well as \Reeof and \Rmmof. Good agreement between the values measured in data and simulation is observed. The extrapolation of the measured value of \Rsfof into the signal region is studied in simulation. No deviation of the values measured in the signal region from those obtained in the control region is observed within the statistical uncertainties of the simulation. This uncertainty is therefore assigned as an systematic uncertainty of the method. 
+The numerical results are summarized in Table~\ref{tab:rSFOF} for \Rsfof as well as \Reeof and \Rmmof. Good agreement between the values measured in data and simulation is observed. The extrapolation of the measured value of \Rsfof into the signal region is studied in simulation by calculating the ratio of \Rsfof observed in the signal region to that in the control region. No deviation of the values measured in the signal region from those obtained in the control region is observed within the statistical uncertainties of the simulation. This uncertainty is therefore assigned as an systematic uncertainty of the method. 
 
 \input{tab/table_Rsfof_full.tex}
 
 \subsection{Determination of \Rsfof with the factorization method}
 \label{sec:rmue}
-Asymmetries between the lepton flavours introduced by differing reconstruction and selection efficiencies can be corrected for if the ratio of efficiencies for muons and electrons $\rmuestar = \frac{\epsilon_{\mu}}{\epsilon_{e}}$ is known. Here and in the following, the $^{*}$ indicates quantities that do not consider the effect of trigger efficiencies. They have therefore to be expressed in terms of the measurable event yields which include these effects. Under the assumption that the efficiencies for the two leptons in the event factorize, i.e. $\epsilon_{ll} = \epsilon_{l}\cdot\epsilon_{l}$, the number of dielectron and dimuon events can be expressed in terms of the the opposite-flavour yield using the relations
+Asymmetries between the lepton flavours introduced by differing reconstruction and selection efficiencies can be corrected for if the ratio of efficiencies for muons and electrons $\rmuestar = \frac{\epsilon_{\mu}}{\epsilon_{e}}$ is known. Here and in the following, the ``$^{*}$'' indicates quantities that do not consider the effect of trigger efficiencies. They have therefore to be expressed in terms of the measurable event yields which include these effects. Under the assumption that the efficiencies for the two leptons in the event factorize, i.e. $\epsilon_{ll} = \epsilon_{l}\cdot\epsilon_{l}$, the number of dielectron and dimuon events can be expressed in terms of the the opposite-flavour yield using the relations
 \begin{equation}
 N_{ee}^{*} = \frac{1}{2}\cdot \frac{N_{OF}^{*}}{\rmuestar}
 \end{equation}
@@ -70,9 +73,13 @@ Finally, the combined prediction of the SF yield is
 N_{SF} = \frac{1}{2}\left(\rmue + \frac{1}{\rmue}\right) \cdot \frac{\sqrt{\effeet \effmmt}}{\effemt}  N_{OF} = \Rsfof N_{OF}.
 \label{eq:nsf}
 \end{equation}
-The factor $\frac{\sqrt{\effeet \effmmt}}{\effemt}$ is denoted $R_{\text{T}}$ in the following.
+The factor containing the trigger efficiencies is abbreviated as
+\begin{equation}
+R_{\mathrm{T}} = \frac{\sqrt{\effeet \effmmt}}{\effemt}.
+\label{eq:RT}
+\end{equation}
 \subsubsection{Measurement of \rmue}
-The measurement of \rmue is performed in the Drell-Yan control region as the ratio of \MM to \EE events on the Z peak, requiring $\unit{60}{\giga\electronvolt} < \mll < \unit{120}{\giga\electronvolt}$. A comparison of the recorded data to the different contributions  from Standard Model processes, estimated from simulation, is shown in Figure~\ref{fig:rmueMll}. The Drell-Yan process is the dominating source of events in this selection. Good agreement between data and simulation is observed, indicating a good understanding of this kinematic region by CMS.   
+The measurement of \rmue is performed in the Drell-Yan control region as the ratio of \MM to \EE events on the Z peak, requiring $\unit{60}{\giga\electronvolt} < \mll < \unit{120}{\giga\electronvolt}$. A comparison of the recorded data to the different contributions  from Standard Model processes, estimated from simulation, is shown in Figure~\ref{fig:rmueMll}. The Drell-Yan process is the dominating source of events in this selection. Good agreement between data and simulation is observed, indicating a good understanding of this kinematic region by CMS. Towards higher masses the data is underestimated by the simulation because higher order effects are not included in the simulation and a lack of events in the simulated samples.  
 \begin{figure}[htbp]
 \centering
 \begin{minipage}[t]{0.49\textwidth}
@@ -84,7 +91,7 @@ The measurement of \rmue is performed in the Drell-Yan control region as the rat
 \caption{Distribution of \mll in the Drell-Yan control region for \MM events (left) and \EE events (right). The data is shown as the black dots, while the contributions from Standard Model processes, estimated from simulation, are shown as the stacked histograms.}
 \label{fig:rmueMll}
 \end{figure} 
-The results of the calculation of \rmue are shown in Table~\ref{tab:rMuE}. Given are the observed yields for \MM and \EE events and the resulting value of \rmue with statistical and systematic uncertainties. In the central lepton selection, the \MM yield is about 18\% higher than the \EE yield. Similar results are observed on Drell-Yan simulation. For events with leptons in the forward region, a larger asymmetry between muons and electrons is observed, here the \MM yield is about 40\% higher than the \EE yield. 
+The results of the calculation of \rmue are shown in Table~\ref{tab:rMuE}. Given are the observed yields for \MM and \EE events and the resulting value of \rmue with statistical and systematic uncertainties. In the central lepton selection, the \MM yield is about 18\% higher than the \EE yield. Similar results are observed on Drell-Yan simulation. For events with leptons in the forward region, a larger asymmetry between muons and electrons is observed. Here the \MM yield is about 40\% higher than the \EE yield, as expected from the fact that the harsher pileup environment in the detector endcaps has a stronger effect on the electron efficiencies. 
 \input{tab/table_rMuE_result.tex}
 The systematic uncertainties assigned to the measured values of \rmue are 10\% for the central and 20\% for the forward lepton selection. These values are obtained by studying the dependency of \rmue on relevant observables. These are on the one hand properties of the lepton pairs, while on the other hand event properties as the jet multiplicity and \MET are studied to ensure the applicability of \rmue in the signal region. The dependencies of \rmue on \mll, \MET, and $N_{jets}$ are shown in Figure~\ref{fig:rmueDependencies}. Some dependency is observed in the case of \mll, where the values are higher for low \mll below the Z peak. This can be traced back to a dependency on the \pt of the leptons, where the efficiencies for muons have sharper turnons compared to electrons. In data, there is a strong effect visible around the Z peak for forward leptons. This is caused by a systematic shift of the position of the Z peak between electron and muons and is not a general property of \rmue, as is evident from the comparison with $t\bar{t}$ simulation shown in the upper right of Figure~\ref{fig:rmueDependencies}. No strong dependencies can be observed for \MET and $N_{jets}$ within the statistical uncertainties. All observed deviations from the central values are covered by the systematic uncertainties assigned to the measurement. Further information on the dependency studies can be found in Appendix~\ref{app:rmue}.
 \begin{figure}[htbp]
@@ -112,29 +119,29 @@ The systematic uncertainties assigned to the measured values of \rmue are 10\% f
 \end{figure} 
 \subsubsection{Measurement of \RT}
 \label{sec:triggerEffs}
-The trigger efficiencies are measured utilizing an event sample collected with PF $H_T$ triggers. Lepton pairs corresponding to the flavour combination of the trigger in question are selected. To ensure that only correctly reconstructed events are considered in the calculation of the trigger efficiencies, the events are required to have $H_T > \unit{200}{\giga\electronvolt}$, which corresponds to the lowest threshold applied in one of the PF $H_T$ trigger. To ensure that the factorization method is performed on event samples complete orthogonal to the signal region and the $t\bar{t}$ enriched control region, events with $N_{jets} \geq 2$ and $\MET > \unit{100}{\giga\electronvolt}$ are rejected. As the offline lepton selection has more strict requirements compared to the one applied at HLT level, the dilepton triggers should have accepted all these events. The trigger efficiency is therefore defined as the ratio of accepted events by the total number of events:
+The trigger efficiencies are measured utilizing an event sample collected with the $H_T$ triggers discussed in section~\ref{sec:trigger}. Lepton pairs corresponding to the flavour combination of the trigger in question are selected. To ensure that only correctly reconstructed events are considered in the calculation of the trigger efficiencies, the events are required to have $H_T > \unit{200}{\giga\electronvolt}$, which corresponds to the lowest threshold applied in one of the $H_T$ trigger. To ensure that the factorization method is performed on event samples complete orthogonal to the signal region and the $t\bar{t}$ enriched control region, events with $N_{jets} \geq 2$ and $\MET > \unit{100}{\giga\electronvolt}$ are rejected. As the offline lepton selection has more strict requirements compared to the one applied at HLT level, the dilepton triggers should have accepted all these events. The trigger efficiency is therefore defined as the ratio of accepted events by the total number of events:
 \begin{equation}
-\epsilon_{ll}^T = \frac{N_{events}(\text{PF }H_T\text{trigger} \cap \text{dilepton selection} \cap \text{dilepton trigger})}{N_{events}(\text{PF }H_T\text{trigger} \cap \text{dilepton selection})}.
+\epsilon_{\ell\ell}^T = \frac{N_{\text{events}}(H_T\text{ trigger} \cap \ell\ell\text{ selection} \cap \ell\ell\text{ trigger})}{N_{\text{events}}(H_T\text{ trigger} \cap \ell\ell\text{ selection})}.
 \end{equation}
-In the case of \MM and OF events, two triggers are used in the event selection. Therefore their combined efficiency is measured, requesting the logical OR of both. The resulting efficiencies are summarized in Table~\ref{tab:EffValues_Seperated}, separately for the central and forward lepton selection. The trigger efficiencies for \EE and \MM are about 97\% in both the central and forward selection. The efficiency for OF events is lower, about 95\% in the central and 90\% in the forward selection. This shows how the flavour symmetry is broken at trigger level by the inclusion of the \verb+HLT_Mu17_TkMu8+ trigger, which recovers efficiency for the trailing muon leg of the trigger and is not present in the OF triggers.   
+In the case of \MM and OF events, two triggers are used in the event selection. Therefore their combined efficiency is measured, requesting the logical OR of both. The resulting efficiencies are summarized in Table~\ref{tab:EffValues_Seperated}, separately for the central and forward lepton selection. The efficiencies on simulation are measured with much higher statistical precision because the trigger prescales are not applied there. The trigger efficiencies for \EE and \MM are about 97\% in both the central and forward selection. The efficiency for OF events is lower, about 95\% in the central and 90\% in the forward selection. This shows how the flavour symmetry is broken at trigger level by the inclusion of the \verb+HLT_Mu17_TkMu8+ trigger, which recovers efficiency for the trailing muon leg of the trigger and is not present in the OF triggers.   
 \input{tab/table_TriggerEffsExclusive_Seperated.tex}
-To asses the systematic uncertainties of the trigger efficiency measurement, potential biases due to the choice of the orthogonal trigger  are studied on simulation, using dileptonic $t\bar{t}$ events. On simulation the efficiency can be measured without the requirement of the PF $H_T$ triggers, as no trigger is needed to select the events. The ratio of this true trigger efficiencies to those measured with the PF $H_T$ triggers as a function of \mll is shown in Figure~\ref{fig:triggerEffBias}, separately for SF and OF events. In both cases all deviations from one are in the order of 0.1\% and well compatible with it inside the statistical uncertainties. No bias of the efficiency measurement due to the PF $H_T$ triggers is observed and therefore no systematic uncertainty due to this choice is assigned to the measurement.
+To asses the systematic uncertainties of the trigger efficiency measurement, potential biases due to the choice of the orthogonal trigger  are studied on simulation, using dileptonic $t\bar{t}$ events. On simulation the efficiency can be measured without the requirement of the $H_T$ triggers, as no trigger is needed to select the events. The ratio of this true trigger efficiencies to those measured with the $H_T$ triggers as a function of \mll is shown in Figure~\ref{fig:triggerEffBias}, separately for SF and OF events. In both cases all deviations from one are in the order of 0.1\% and well compatible with it inside the statistical uncertainties. No bias of the efficiency measurement due to the $H_T$ triggers is observed and therefore no systematic uncertainty due to this choice is assigned to the measurement.
 \begin{figure}
 \begin{center}
 \includegraphics[scale=0.35]{plots/BG/trigger/Triggereff_AlphaTSyst_PFHT_HighHTExclusive_Full2012_Mll_None.pdf}
-\caption{Ratio of true trigger efficiencies to those calculated using the PF $H_T$ triggers separately for SF and OF events.}
+\caption{Ratio of true trigger efficiencies to those calculated using the \HT triggers separately for SF and OF events.}
 \label{fig:triggerEffBias}
 \end{center}
 \end{figure}
-The turnon of the triggers at low lepton \pt is of particular interest because asymmetries between the lepton flavours are more likely to occur in this difficult environment. The dependence of the trigger efficiency on the \pt of the trailing lepton can be studied using datasets trigger by single lepton triggers. Triggers with \pt thresholds of $\unit{24(27)}{\giga\electronvolt}$ for muons (electrons) are available. These thresholds are relatively low for single lepton triggers, resulting in very strict selection criteria having to be applied on HLT level. Dilepton events are selected in which the leading lepton can be matched  geometrically to the trigger object that fired the single lepton trigger. The trailing lepton is matched to trigger objects that have fired the trailing leg of the dilepton trigger. The efficiency is defined as the ratio of the number of events in which the dilepton trigger has fired to the total number of dilepton events. The resulting efficiency curves are shown in Figure~\ref{fig:triggerEffTrailing} for five different trailing lepton trigger legs and combining the central and forward selection. It can be seen that the efficiency for trailing electrons are virtually the same for the dielectron and OF triggers (black and light blue markers). The same is true for trailing muons in the dimuon and OF triggers (brown and dark blue markers). However, the efficiency for trailing muons in the \verb+HLT_Mu17_TkMu8+ trigger is significantly higher than those in the trigger paths not using the tracker information, as expected. Trailing muons have a much sharper turnon than trailing electrons, being fully efficient already at a \pt of $\unit{10}{\giga\electronvolt}$. For electrons the plateau is reached only above $\unit{\approx 30}{\giga\electronvolt}$. The turnon is steeper for trailing electrons in the dielectron trigger compared to those in the OF trigger, resulting in an increased deviation from flavour symmetry below $\unit{20}{\giga\electronvolt}$. As in the design of the analysis the precision and stability of the background prediction was given priority over lepton acceptance, events with trailing leptons in this \pt range are rejected.  
+The turnon of the triggers at low lepton \pt is of particular interest because asymmetries between the lepton flavours are more likely to occur in this difficult environment. The dependence of the trigger efficiency on the \pt of the trailing lepton can be studied using datasets trigger by single lepton triggers. Triggers with \pt thresholds of $\unit{24(27)}{\giga\electronvolt}$ for muons (electrons) are available. These thresholds are relatively low for single lepton triggers, resulting in very strict selection criteria having to be applied on HLT level. Dilepton events are selected in which the leading lepton can be matched  geometrically to the trigger object that fired the single lepton trigger. The trailing lepton is matched to trigger objects that have fired the trailing leg of the dilepton trigger. The efficiency is defined as the ratio of the number of events in which the dilepton trigger has fired to the total number of dilepton events. The resulting efficiency curves are shown in Figure~\ref{fig:triggerEffTrailing} for five different trailing lepton trigger legs and combining the central and forward selection. It can be seen that the efficiency for trailing electrons are virtually the same for the dielectron and OF triggers (black and light blue markers). The same is not true for trailing muons in the dimuon and OF triggers (red and dark blue markers), caused by the increased efficiency for trailing muons in the \verb+HLT_Mu17_TkMu8+ trigger, which is significantly higher than those in the trigger paths not using the tracker information, as expected. Trailing muons have a much sharper turnon than trailing electrons, being fully efficient already at a \pt of $\unit{10}{\giga\electronvolt}$. For electrons the plateau is reached only above $\unit{\approx 30}{\giga\electronvolt}$. The turnon is steeper for trailing electrons in the dielectron trigger compared to those in the OF trigger, resulting in an increased deviation from flavour symmetry below $\unit{20}{\giga\electronvolt}$. As in the design of the analysis the precision and stability of the background prediction was given priority over lepton acceptance, events with trailing leptons in this \pt range are rejected.  
 \begin{figure}
 \begin{center}
 \includegraphics[scale=0.35]{plots/BG/trigger/Triggereff_SingleLepton_HighHTExclusive_Full2012_TrailingPt_leadingPt30Single.pdf}
-\caption{Efficiency of the trailing lepton legs of the dilepton trigger measured on a sample of events selected with single lepton triggers.}
+\caption{Efficiency of the trailing lepton legs of the dilepton trigger measured on a sample of data events selected with single lepton triggers.}
 \label{fig:triggerEffTrailing}
 \end{center}
 \end{figure} 
-To asses the systematic uncertainties of the trigger efficiency measurement, the dependency of $R_T$ as used in the calculation of \Rsfof on different observables is tested. Here a dataset not triggered by $\alpha_T$ triggers is used, as the PF $H_T$ triggers do not provide enough events for these studies. A 5\% systematic uncertainty is assigned to each trigger efficiency, resulting in an uncertainty of 6.4\% on $R_T$, covering all observed deviations from the the measured value of $R_T$ within the statistical uncertainties, as shown in Figure\ref{fig:RTDependencies}. Studies of further variables can be found in Appendix~\ref{app:RT}.
+To asses the systematic uncertainties of the trigger efficiency measurement, the dependency of $R_T$ as used in the calculation of \Rsfof on different observables is tested. Here a dataset not triggered by $\alpha_T$ triggers is used, as the PF $H_T$ triggers do not provide enough events for these studies. A 5\% systematic uncertainty is assigned to each trigger efficiency, resulting in an uncertainty of 6.4\% on $R_T$, covering all observed deviations from the the measured value of $R_T$ within the statistical uncertainties, as shown in Figure~\ref{fig:RTDependencies}. Studies of further variables can be found in Appendix~\ref{app:RT}.
 \begin{figure}[htbp]
 \centering
 \begin{minipage}[t]{0.49\textwidth}
@@ -159,9 +166,9 @@ To asses the systematic uncertainties of the trigger efficiency measurement, the
 \label{fig:RTDependencies}
 \end{figure} 
 \subsubsection{Results of the factorization method}
-The results of the factorization methods are summarized in Table~\ref{tab:factorization}. The factor $R_T$ is calculated from the trigger efficiencies in Table~\ref{tab:EffValues_Seperated} as $R_T = \sqrt{\frac{\epsilon_{ee}^{T}\cdot\epsilon_{\mu\mu}^{T} }{\epsilon_{e\mu}^{T}}}$. The resulting correction factors \Rsfof, \Reeof, and \Rmmof are calculated as described in equations~\ref{eq:nee}-\ref{eq:nsf}.  
+The results of the factorization methods are summarized in Table~\ref{tab:factorization}. The factor $R_T$ is calculated from the trigger efficiencies in Table~\ref{tab:EffValues_Seperated} via equation~\ref{eq:RT}. The resulting correction factors \Rsfof, \Reeof, and \Rmmof are calculated as described in equations~\ref{eq:nee}-\ref{eq:nsf}.  
 \input{tab/table_factorization_result.tex}
-As for the direct measurements in the control region, the observed deviations of \Rsfof from one are small and inside the uncertainties of the method. Because the uncertainty on \rmue cancels out to a large degree in the calculation \Rsfof, the total uncertainty is dominated by the uncertainty on $R_T$, while for \Reeof and \Rmmof the uncertainty of \rmue is the dominant one. This results in much larger uncertainties on the latter two factors. The dependency of \Rsfof on \rmue and $R_T$ is illustrated in Figure~\ref{fig:rmuePropaganda}. The measured values of \rmue and \Rsfof are shown as straight lines, surrounded by bands indicating their uncertainties. The red line shows the value of \Rsfof corresponding to a given \rmue, under the assumption that the trigger efficiencies stay constant. The dashed black lines show the impact that the uncertainties on the trigger efficiencies have on the resulting \Rsfof. It can be seen that variations of \rmue inside its systematic uncertainties have only little effect on \Rsfof, while changes in the trigger efficiencies have a much larger impact. 
+As for the direct measurements in the control region, the observed deviations of \Rsfof from one are small and inside the uncertainties of the method. Because the uncertainty on \rmue cancels out to a large degree in the calculation \Rsfof, the total uncertainty is dominated by the uncertainty on $R_T$, while for \Reeof and \Rmmof the uncertainty of \rmue is the dominant one. This results in much larger uncertainties on the latter two factors. The dependency of \Rsfof on \rmue and $R_T$ as given by equation~\ref{eq:nsf} is illustrated in Figure~\ref{fig:rmuePropaganda}. The measured values of \rmue and \Rsfof are shown as straight lines, surrounded by bands indicating their uncertainties. The red line shows the value of \Rsfof corresponding to a given \rmue, under the assumption that the trigger efficiencies stay constant. The dashed black lines show the impact that the uncertainties on the trigger efficiencies have on the resulting \Rsfof. It can be seen that variations of \rmue inside its systematic uncertainties have only little effect on \Rsfof, while changes in the trigger efficiencies have a much larger impact. 
 
 
 \begin{figure}[htbp]
