--- a/tab/table_Rsfof_full.tex
+++ b/tab/table_Rsfof_full.tex
@@ -5,8 +5,9 @@
  \centering
  \caption{Observed event yields in the control region and the resulting values of \Rsfof, \Reeof, and \Rmmof. The results are shown separately for the central and forward lepton selection and the same quantities derived on simulation are shown for comaprison.}
   \label{tab:rSFOF}
-\begin{tabular}{l|c|c|c|c}     
- & $N_{SF}$ & $N_{OF}$ & $ \Rsfof \pm \sigma_{stat}$ & Transfer factor $\pm \sigma_{stat}$  \\    
+\begin{tabular}{l|c|c|c|c}
+\multicolumn{5}{c}{Control region}\\ \hline     
+ & $N_{SF}$ & $N_{OF}$ & $ \Rsfof \pm \sigma_{stat}$ & signal/control region $\pm \sigma_{stat}$  \\    
 \hline
 &  \multicolumn{4}{c}{Central} \\
 \hline
@@ -21,7 +22,7 @@
  MC & 565.1 & 517.5 & 1.092$\pm$0.026 & 0.997$\pm$0.034\\
 
 \hline\hline
- & $N_{ee}$ & $N_{OF}$ & $ \Reeof \pm \sigma_{stat}$ & Transfer factor $\pm \sigma_{stat}$  \\    
+ & $N_{ee}$ & $N_{OF}$ & $ \Reeof \pm \sigma_{stat}$ & signal/control region $\pm \sigma_{stat}$  \\    
 \hline
 &  \multicolumn{4}{c}{Central} \\
 \hline
@@ -36,7 +37,7 @@
  MC & 237.9 & 517.5 & 0.460$\pm$0.014 & 1.023$\pm$0.043\\
 
 \hline\hline
- & $N_{\mu\mu}$ & $N_{OF}$ & $ \Rmmof \pm \sigma_{stat}$ & Transfer factor $\pm \sigma_{stat}$  \\    
+ & $N_{\mu\mu}$ & $N_{OF}$ & $ \Rmmof \pm \sigma_{stat}$ & signal/control region $\pm \sigma_{stat}$  \\    
 \hline
 & \multicolumn{4}{c}{Central} \\
 \hline
