--- a/tab/table_TriggerEffsExclusive_Seperated.tex
+++ b/tab/table_TriggerEffsExclusive_Seperated.tex
@@ -1,5 +1,5 @@
 
-\begin{table}[hbp] \caption{Triggerefficiencies for data and MC with OS, $p_T>20(20)\,\GeV$ and $H_T>200\,\GeV$ for central and forward region seperated.} 
+\begin{table}[hbp] \caption{Trigger efficiencies measured using \HT baseline trigger. The results are shown for the central and forward regions separately.} 
 \centering 
 \renewcommand{\arraystretch}{1.2} 
 \begin{tabular}{l|c|c|c|c|c|c}     
