--- a/tab/table_ROutIn.tex
+++ b/tab/table_ROutIn.tex
@@ -6,7 +6,7 @@
  \caption{Results of the calculation of \Routin separately for the low-mass and high-mass regions in the central and forward dilepton selection.}
   \label{tab:rOutIn}
 \begin{tabular}{l|c|c|c}     
- & $N_{\text{out}}$ & $N_{\text{in}}$ & $ \Routin (SF) \pm \sigma_{stat}$  \\    
+ & $N_{\text{out}}$ & $N_{\text{in}}$ & $ \Routin (\text{SF}) \pm \sigma_{\text{stat}} \pm \sigma_{\text{syst}}$  \\    
 \hline
  & \multicolumn{3}{c}{Central} \\
 \hline 
