--- a/tab/table_cutNCount_Result_SF.tex
+++ b/tab/table_cutNCount_Result_SF.tex
@@ -6,7 +6,6 @@
  \centering
  \caption{Results of the counting experiment in the six signal regions.
      The statistical and systematic uncertainties are added in quadrature, except for the flavor-symmetric backgrounds.
-     Low-mass refers to $20 < \mll < 70$\GeV, on-\Z to  $81 < \mll < 101$\GeV, and high-mass to $\mll > 120$\GeV.
      }
   \label{tab:METresults2012}
   \begin{tabular}{l| cc | cc | cc}
@@ -28,7 +27,7 @@
             Total estimated          & $755\pm38$            & $147\pm14$      & $488\pm31$ & $180\pm16$ & $792\pm39$ & $413\pm30$ \\
 
     \hline
-         Observed - estimated  & $109^{+48}_{-48}$      & $7^{+19}_{-19}$ & $6^{+37}_{-38} $ & $-5^{+21}_{-21}$ & $57^{+49}_{-50}$ & $-32^{+35}_{-37} $ \\ 
+         Observed - estimated  & $109\pm48$      & $7\pm19$ & $6\pm38 $ & $-5\pm21$ & $57\pm50$ & $-32\pm37 $ \\ 
 
     \hline
    Significance      & 2.2~$\sigma$    &  0.4~$\sigma$  & 0.1~$\sigma$ & $<$0.1~$\sigma$ & 1.1~$\sigma$ & $<$0.1~$\sigma$ \\ 
