--- a/theory.tex
+++ b/theory.tex
@@ -1,4 +1,5 @@
 The Standard Model (SM) of particle physics is a highly successful, commonly accepted description of the fundamental particles and their interactions and at the same time subject to several shortcomings, motivating the search for signs of new phenomena beyond its scope. In this chapter a short overview of the SM and its shortcoming is given. Supersymmetry is presented as an attractive candidate for the extension of the SM and the phenomenological consequences of its existence relevant to this analysis are discussed. 
+\label{sec:theo}
 \section{The Standard Model of particle physics}
 The SM describes the fundamental particles in the framework of a renormalizable quantum field theory, in which each particle is represented by one quantum field~\cite{Glashow1961579,Salam1964168,PhysRevLett.19.1264,PhysRevD.5.1412}. Two fundamental classes of particles are distinguished, bosons with integer and fermions with half-integer spin. 
 
@@ -91,7 +92,7 @@ charginos & $\tilde{\W}^+$, $\tilde{\W}^-$, $\tilde{\HH}_1^-$, $\tilde{\HH}_2^+$
 \end{tabular}
 \end{table} 
 
-If such a model would be realized it would alleviate the hierachy problem because the contributions of the superpartners to the quantum loop corrections to the Higgs mass have opposite sign than those of the SM particles, cancelling the dependency on the cut-off parameter $\Lambda_{UV}$. However, as no superpartners have been discovered so far, SUSY must be a broken symmetry and the sparticles can not have the same mass as the corresponding SM particles but must be heavier. Therefore the cancellation of contributions to the Higgs boson mass becomes imperfect. To prevent the need for fine-tuning, sparticle masses are expected to be at the TeV scale. Especially the top squark mass must to rather small as the top quark is the heaviest SM particle and contributes dominantly to the loop corrections. 
+If such a model would be realised it would alleviate the hierachy problem because the contributions of the superpartners to the quantum loop corrections to the Higgs mass have opposite sign than those of the SM particles, cancelling the dependency on the cut-off parameter $\Lambda_{UV}$. However, as no superpartners have been discovered so far, SUSY must be a broken symmetry and the sparticles can not have the same mass as the corresponding SM particles but must be heavier. Therefore the cancellation of contributions to the Higgs boson mass becomes imperfect. To prevent the need for fine-tuning, sparticle masses are expected to be at the TeV scale. Especially the top squark mass must to rather small as the top quark is the heaviest SM particle and contributes dominantly to the loop corrections. 
 
 SUSY introduces lepton- and baryon number violating couplings, which would allow for rapid proton decay, in contradiction to its extremely long lifetime. To keep the proton stable, the quantum number R-parity
 \begin{equation}
@@ -110,7 +111,7 @@ The multitude of superpartners offer a rich variety of experimental signatures t
 \label{fig:SUSYXSecs}
 \end{figure}
 
-The experimental signature of SUSY are cascades of decays of the initially produced particles into the LSP under emission of several SM particles. In the case of strong production, at least two quarks or gluons are produced in the first decays of the two decay chains in the events. These will hadronize into jets. Often even more jets are produced in the decay chains, making high jet multiplicities and large amounts of hadronic energy typical signatures of SUSY. In the models condiered here, the LSP is stable and will leave the detector undetected, resulting in \MET (see section~\ref{sec:variables}).
+The experimental signature of SUSY are cascades of decays of the initially produced particles into the LSP under emission of several SM particles. In the case of strong production, at least two quarks or gluons are produced in the first decays of the two decay chains in the events. These will hadronise into jets. Often even more jets are produced in the decay chains, making high jet multiplicities and large amounts of hadronic energy typical signatures of SUSY. In the models condiered here, the LSP is stable and will leave the detector undetected, resulting in \MET (see Section~\ref{sec:variables}).
 
 As leptons are easy to identify and can be measured precisely, requiring the presence of leptons in the events helps to suppress backgrounds from SM processes such as QCD multijet production. Of particular interest to this analysis are SUSY cascades which contain the correlated production of lepton pairs of the same flavour but opposite electric charge. Due to their more challenging experimental signature, $\tau$ leptons are not considered. The relevant decay is that of a next-to-lightest neutralino into the lightest neutralino and two leptons $\secondchi \rightarrow \firstchi \ell^+\ell^-$, which can occur either via an intermediate slepton or an off- or on-shell \Z boson:
 \begin{align}
@@ -160,7 +161,7 @@ Both models consider the pair production of bottom squarks. This choice was info
  In the ``fixed-edge'' model, it decays into an off-shell \Z boson and a \firstchi in 100\% of the cases. The \Z boson decays with its SM branching ratios, producing light leptons in about 7\% of the cases. The $m_{\sbottom}$-$m_{\secondchi}$-plane is scanned, varying the masses of the two particles in steps of 25\GeV. The mass of the \firstchi is fixed to be 70\GeV below that of the \secondchi to produce an edge in the \mll spectrum at this value.
 
 As a mass difference between the two neutralinos larger than the \Z boson mass would only result in the production of on-shell \Z bosons in this model, the ``slepton-edge'' model introduces selectrons and smuons as additional new particles. The mass of these sleptons is assumed to be degenerate and set to lie halfway between the two neutralinos: $m_{\slepton} = m_{\firstchi} + 0.5(m_{\secondchi}-m_{\firstchi})$. The branching fractions of the \secondchi are chosen such that the decay in an off- or on-shell \Z boson or a slepton and a lepton occur with 50\% probability each. The \Z boson again decays according to its SM branching fraction while the slepton always decays into a lepton and the \firstchi. Again the $m_{\sbottom}$-$m_{\secondchi}$-plane is scanned in steps of 25\GeV, while the $m_{\firstchi}$ is set to be 100\GeV, allowing for edges in the \mll spectrum also above the \Z boson mass. 
-The signal simulation is normalized to theory cross sections calculated at NLO in $\alpha_s$, including the leading logarithmic contributions of the next higher order~\cite{bib-nlo-nll-01,bib-nlo-nll-02,bib-nlo-nll-03,bib-nlo-nll-04,bib-nlo-nll-05,ref:xsec}.
+The signal simulation is normalised to theory cross sections calculated at NLO in $\alpha_s$, including the leading logarithmic contributions of the next higher order~\cite{bib-nlo-nll-01,bib-nlo-nll-02,bib-nlo-nll-03,bib-nlo-nll-04,bib-nlo-nll-05,ref:xsec}.
 
 Figure~\ref{fig:SUSYMasses} illustrates the \mll distributions for three example points. The two examples from the slepton-edge model are roughly triangular in shape while the one from the fixed-edge model is peaked towards $m_{\Z}$ as in this model the decay is mediated by an off-shell \Z boson. Contributions outside of the edges are caused by events with more than two leptons where the wrong combination has been chosen. In addition to the generated distributions the ones reconstructed after a simulation of the CMS detector are shown, illustrating the good detector resolution for lepton pairs.
 \begin{figure}
@@ -172,13 +173,13 @@ Figure~\ref{fig:SUSYMasses} illustrates the \mll distributions for three example
 
 \section{Standard Model processes}
 \label{sec:SMBackgrounds}
-The signature of jets, \MET and a pair of same-flavour opposite-sign leptons is not unique to the signal. Several SM processes can behave similarly and constitute backgrounds in this analysis. They can be categorized by the nature of their dilepton production. 
+The signature of jets, \MET and a pair of same-flavour opposite-sign leptons is not unique to the signal. Several SM processes can behave similarly and constitute backgrounds in this analysis. They can be categorised by the nature of their dilepton production. 
 
 A process exhibiting the correlated production of leptons similar to the signal is for example $pp \rightarrow \Z/\gamma^{\star}\rightarrow \ell\ell$. In this process, jets are commonly produced as initial state radiation off the incoming partons. Even though no invisible particles are produced in this process, requiring the \MET to be caused by mismeasurements, the large production cross section of this process leads to significant number of events with large \MET. Other processes with correlated production relevant to this analysis are the production of \Z bosons in association with other gauge bosons ($\mathrm{WZ}$,$\mathrm{ZZ}$) or top quark pair production ($t\bar{t}$\Z). All these processes will be summarised as ``Drell--Yan'' in the following. 
 
-The other class of background exhibit uncorrelated production leptons. The dominant contribution to this analysis comes from the dileptonic decay of top quark pair production $pp\rightarrow t\bar{t} \rightarrow \W b \W \bar{b}\rightarrow \ell b\nu \ell \bar{b} \nu$. This includes decays via intermediate $\tau$ leptons $\text{W}\rightarrow \tau \nu \rightarrow \ell \nu \nu \nu$. The leptons have opposite sign, but can be of same or opposite flavour with the same probability. This is also the case for the production of single top quarks in association with a W boson or of $\tau$ leptons in the decay $\Z \rightarrow \tau\tau \rightarrow \ell\nu\ell\nu$. These backgrounds are called ``flavour-symmetric'' throughout this analysis.
+The other class of background exhibit uncorrelated production leptons. The dominant contribution to this analysis comes from the dileptonic decay of top quark pair production $pp\rightarrow t\bar{t} \rightarrow \W b \W \bar{b}\rightarrow \ell b\nu \ell \bar{b} \nu$. This includes decays via intermediate $\tau$ leptons $\text{W}\rightarrow \tau \nu \rightarrow \ell \nu \nu \nu$. The leptons have opposite sign, but can be of same or opposite flavour with the same probability. This is also the case for the production of single top quarks in association with a W boson or of $\tau$ leptons in the decay $\Z \rightarrow \tau\tau \rightarrow \ell\nu\ell\nu$. These backgrounds are called ``flavour-symmetric'' throughout this analysis. They also include contributions from leptons not originating from the hard interaction. These ``non-prompt'' leptons include leptons from the decay of charm or bottom (summarised as ``heavy flavour'') quarks inside hadronic jets or jets misidentified as leptons.
 
-The production cross sections for different processes as a function of the centre-of-mass energy of the collisions are shown in Figure~\ref{fig:xsecs} in $\mathrm{nb}$. The total interaction cross section is in the order of $\unit{10^{8}}{\nano\barn}$. It is dominated by soft QCD processes which are of little interest to this analysis. However, given the high instantaneous luminosity achieved at the LHC (see section~\ref{sec:LHC}), many interactions occur in each collision. This leads to additional particles in the detector on top of the signature of the relevant physics process, an effect called ``pileup''.
+The production cross sections for different processes as a function of the centre-of-mass energy of the collisions are shown in Figure~\ref{fig:xsecs} in $\mathrm{nb}$. The total interaction cross section is in the order of $\unit{10^{8}}{\nano\barn}$. It is dominated by soft QCD processes which are of little interest to this analysis. However, given the high instantaneous luminosity achieved at the LHC (see Section~\ref{sec:LHC}), many interactions occur in each collision. This leads to additional particles in the detector on top of the signature of the relevant physics process, an effect called ``pileup''.
 
 As mentioned before, the cross section for $\Z/\gamma^{\star}$ boson production is very large, exceeding that for the production of top quarks by two orders of magnitude. This underlines the importance of \MET in the signature to reduce this background.
 The cross section for Higgs boson production is close to that of some of the processes discussed above. However the branching fraction of the Higgs boson in decay channels relevant to this signature is too small for it to contribute significantly. 
