--- a/thesis.tex
+++ b/thesis.tex
@@ -32,6 +32,9 @@
 \usepackage{rotating}
 \usepackage{multirow}
 %\usepackage{ptdr-definitions}
+\usepackage{footnote}
+\makesavenoteenv{tabular}
+\makesavenoteenv{table}
 
 \usepackage[small]{caption}
 \usepackage[plainheadsepline,automark]{scrpage2}
@@ -235,9 +238,9 @@
 \input{title}
 \pagenumbering{roman}
 
-\addsec{Zusammenfassung}
+%\addsec{Zusammenfassung}
 %\input{Zusammenfassung}
-\addsec{Abstract}
+%\addsec{Abstract}
 %\input{Abstract}
 
 %Inhalt
