--- a/CMS.tex
+++ b/CMS.tex
@@ -6,7 +6,7 @@ Located in one of the four intersections of the LHC beams, the CMS detector is d
 \label{fig:CMS}
 \end{figure}
 \subsection{Tracking system}
-The trajectory of charged particles can be determined by measuring the signal of the ionization they cause when traversing matter. The tracking system of the CMS detector consists of many layers of silicon pixels and strips. Combining the points at which a charged particle traverses the different layers, the trajectory of this particle can be reconstructed. The bending of this trajectory under the influence of the magnetic field allows to determine the momentum of the particle. The tracking system has a diameter of $\unit{2.5}{\meter}$ and a length of $\unit{5.8}{\meter}$, corresponding to a geometric coverage of $\vert \eta \vert < $ 2.5. The tracking detector consists, as shown in Figure~\ref{fig:tracker}, of the pixel detector (PIXEL) surrounded by various components of  the silicon strip tracker. 
+The trajectory of charged particles can be determined by measuring the signal of the ionisation they cause when traversing matter. The tracking system of the CMS detector consists of many layers of silicon pixels and strips. Combining the points at which a charged particle traverses the different layers, the trajectory of this particle can be reconstructed. The bending of this trajectory under the influence of the magnetic field allows to determine the momentum of the particle. The tracking system has a diameter of $\unit{2.5}{\meter}$ and a length of $\unit{5.8}{\meter}$, corresponding to a geometric coverage of $\vert \eta \vert < $ 2.5. The tracking detector consists, as shown in Figure~\ref{fig:tracker}, of the pixel detector (PIXEL) surrounded by various components of  the silicon strip tracker. 
 \begin{figure}[htbp]
 \centering
   \includegraphics[width=0.6\textwidth]{plots/CMS/Tracker.png}
@@ -43,7 +43,7 @@ In the region of $1.653 < \vert \eta \vert < 2.6$ a preshower detector, consisti
 
 The production of scintillation photons per deposited energy is temperature dependent. Therefore, the ECAL is kept at a temperature of $\unit{18\pm0.05}{\celsius}$, which results in a yield of about 4.5 photons per $\mathrm{MeV}$. 
 
-The typical energy resolution of the ECAL is parametrized as
+The typical energy resolution of the ECAL is parametrised as
 \begin{equation}
 \left(\frac{\sigma}{E}\right)^2 = \left( \frac{2.8\%}{\sqrt{E}}\right)^2 + \left( \frac{0.12}{E} \right)^2 + (0.30\%)^2,
 \end{equation}
@@ -74,7 +74,7 @@ In the barrel, the DT chambers, each made of two or three superlayers, which in 
 \label{fig:DT}
 \end{figure}  
 \subsubsection*{Cathode strip chambers (CSC)}
-The CSC are multiwire proportional chambers, consisting of six planes of anode wires interleaved with seven panels of cathode strips. The chambers have trapezoidal shapes and are arranged in four discs around the beam axis, each further segmented into two or three rings. The cathode strips measure the $\phi$ coordinate while the anode wires measure the radial coordinate. Figure~\ref{fig:CSC} shows the structure of one chamber on the left side and the creation of a signal due to a amplification of the initial ionization in an avalanche close to the anode wire. 
+The CSC are multiwire proportional chambers, consisting of six planes of anode wires interleaved with seven panels of cathode strips. The chambers have trapezoidal shapes and are arranged in four discs around the beam axis, each further segmented into two or three rings. The cathode strips measure the $\phi$ coordinate while the anode wires measure the radial coordinate. Figure~\ref{fig:CSC} shows the structure of one chamber on the left side and the creation of a signal due to a amplification of the initial ionisation in an avalanche close to the anode wire. 
 \begin{figure}[htbp]
 \centering
   \includegraphics[width=0.6\textwidth]{plots/CMS/CSC.png}
