--- a/DAQTrig.tex
+++ b/DAQTrig.tex
@@ -11,7 +11,7 @@ The global trigger collects the information from the global muon and calorimeter
 
 
 \subsubsection*{Data acquisition system (DAQ)}
-Following an L1 accept the DAQ receives the information from the different subdetectors split in about 650 data sources, each delivering about 2\,kB of data. These event fragments are assembled into whole events by the event builder. The event is then sent to one Filter Unit in the Event Filter, where the HLT software is running. The DAQ has to deal with input rates of up to $\unit{100}{\kilo\hertz}$ and consists of 8 nearly independent slices, each able to take input at a rate of $\unit{12.5}{\kilo\hertz}$. The DAQ includes a back-pressure system, which automatically throttles the L1 trigger in case the input rate exceeds what can be processed by the DAQ. This introduces dead times in the detector readout but prevents data corruption and buffer overflows. To fully utilize the capacities of the trigger system and the DAQ, trigger thresholds can be adapted during data taking. The shortest time scale on which the thresholds are kept constant is called lumi section and is defined as $2^{20}$ LHC orbits, corresponding to about $\unit{93}{\second}$. The structure of the DAQ is shown in Figure~\ref{fig:L1Daq}.
+Following an L1 accept the DAQ receives the information from the different subdetectors split in about 650 data sources, each delivering about 2\,kB of data. These event fragments are assembled into whole events by the event builder. The event is then sent to one Filter Unit in the Event Filter, where the HLT software is running. The DAQ has to deal with input rates of up to $\unit{100}{\kilo\hertz}$ and consists of 8 nearly independent slices, each able to take input at a rate of $\unit{12.5}{\kilo\hertz}$. The DAQ includes a back-pressure system, which automatically throttles the L1 trigger in case the input rate exceeds what can be processed by the DAQ. This introduces dead times in the detector readout but prevents data corruption and buffer overflows. To fully utilise the capacities of the trigger system and the DAQ, trigger thresholds can be adapted during data taking. The shortest time scale on which the thresholds are kept constant is called lumi section and is defined as $2^{20}$ LHC orbits, corresponding to about $\unit{93}{\second}$. The structure of the DAQ is shown in Figure~\ref{fig:L1Daq}.
 \begin{figure}[htbp]
 \centering
 \begin{minipage}[t]{0.49\textwidth}
@@ -31,7 +31,7 @@ The most important signal and control samples for this analysis are collected wi
 
 Other HLT paths used in this analysis select events based on the scalar sum of the \pt of hadronic jets (\HT), the $\alpha_{\mathrm{T}}$ variable~\cite{Khachatryan2011196}, which takes into account balance of jets in an event, and single electrons and muons, which are selected with tighter identification and isolation criteria compared to the dilepton triggers. Also, in order to study non-prompt leptons, events with low \pt single leptons are selected using trigger paths that apply the same selection as the trailing legs of the dilepton triggers. 
 
-As the trigger rates for the \HT, $\alpha_{\mathrm{T}}$, and low \pt lepton triggers are very high, the triggers are prescaled, meaning that only a fraction of the selected events are actually recorded and reconstructed.
+As the trigger rates for the \HT, $\alpha_{\mathrm{T}}$, and low \pt single lepton triggers are very high, these triggers are prescaled, meaning that only a predefined fraction of the selected events are actually recorded and reconstructed.
 
   
 
