--- a/appendixRT.tex
+++ b/appendixRT.tex
@@ -1,6 +1,6 @@
 \chapter{Dependencies of \RT}
 \label{app:RT}
-
+In Section~\ref{sec:rmue}, the dependency of \RT on \mll, \njets, and \MET has been shown. Here, additional dependency plots are given here for the \pt of the leading and trailing lepton (Figure~\ref{fig:RTDependenciesApp1}, the $|\eta|$ of the trailing lepton and \HT (Figure~\ref{fig:RTDependenciesApp2}), and $N_{\text{Vertex}}$ in Figure~\ref{fig:RTDependenciesApp3}. No significant dependency is observed for either of those variables.
 
 \begin{figure}[htbp]
 \centering
@@ -30,29 +30,23 @@
 \includegraphics[width=\textwidth]{plots/BG/trigger/Triggereff_SFvsOF_Syst_AlphaT_HighHTExclusiveForward_Full2012_TrailingEta_None.pdf}
 \end{minipage}
 \begin{minipage}[t]{0.49\textwidth}
-  \includegraphics[width=\textwidth]{plots/BG/trigger/Triggereff_SFvsOF_Syst_AlphaT_HighHTExclusiveCentral_Full2012_Mll_None.pdf}
+  \includegraphics[width=\textwidth]{plots/BG/trigger/Triggereff_SFvsOF_Syst_AlphaT_HighHTExclusiveCentral_Full2012_HT_None.pdf}
 \end{minipage}
 \begin{minipage}[t]{0.49\textwidth}
-\includegraphics[width=\textwidth]{plots/BG/trigger/Triggereff_SFvsOF_Syst_AlphaT_HighHTExclusiveForward_Full2012_Mll_None.pdf}
+\includegraphics[width=\textwidth]{plots/BG/trigger/Triggereff_SFvsOF_Syst_AlphaT_HighHTExclusiveForward_Full2012_HT_None.pdf}
 \end{minipage}
-\caption{Dependencies of $R_T$ on the $|\eta|$ of the trailing lepton (top) and \mll (bottom) for the central (left) and forward (right) lepton selection. The results on data are shown in black. The central value is shown as a black dashed line while the systematic uncertainty is shown as an orange band.}
+\caption{Dependencies of $R_T$ on the $|\eta|$ of the trailing lepton (top) and \HT (bottom) for the central (left) and forward (right) lepton selection. The results on data are shown in black. The central value is shown as a black dashed line while the systematic uncertainty is shown as an orange band.}
 \label{fig:RTDependenciesApp2}
 \end{figure}  
 
 \begin{figure}[htbp]
 \centering
 \begin{minipage}[t]{0.49\textwidth}
-  \includegraphics[width=\textwidth]{plots/BG/trigger/Triggereff_SFvsOF_Syst_AlphaT_HighHTExclusiveCentral_Full2012_HT_None.pdf}
-\end{minipage}
-\begin{minipage}[t]{0.49\textwidth}
-\includegraphics[width=\textwidth]{plots/BG/trigger/Triggereff_SFvsOF_Syst_AlphaT_HighHTExclusiveForward_Full2012_HT_None.pdf}
-\end{minipage}
-\begin{minipage}[t]{0.49\textwidth}
   \includegraphics[width=\textwidth]{plots/BG/trigger/Triggereff_SFvsOF_Syst_AlphaT_HighHTExclusiveCentral_Full2012_nVtx_None.pdf}
 \end{minipage}
 \begin{minipage}[t]{0.49\textwidth}
 \includegraphics[width=\textwidth]{plots/BG/trigger/Triggereff_SFvsOF_Syst_AlphaT_HighHTExclusiveForward_Full2012_nVtx_None.pdf}
 \end{minipage}
-\caption{Dependencies of $R_T$ on $H_T$ (top), and $N_{vertex}$ (bottom) for the central (left) and forward (right) lepton selection. The results on data are shown in black. The central value is shown as a black dashed line while the systematic uncertainty is shown as an orange band.}
-\label{fig:RTDependenciesApp2}
+\caption{Dependencies of $R_T$ on $N_{\text{vertex}}$ for the central (left) and forward (right) lepton selection. The results on data are shown in black. The central value is shown as a black dashed line while the systematic uncertainty is shown as an orange band.}
+\label{fig:RTDependenciesApp3}
 \end{figure}  
