--- a/appendixRmue.tex
+++ b/appendixRmue.tex
@@ -1,5 +1,6 @@
 \chapter{Dependencies of \rmue}
 \label{app:rmue}
+Several dependency studies for \rmue in addition to what is presented in Section~\ref{sec:rmue} are presented here. It can be seen that \rmue decreases with both increasing leading and trailing lepton \pt (Figure~\ref{fig:rmueDependenciesApp1}). For the leading lepton, it stabilizes at the central value for $\unit{\pt > 45}{\giga\electronvolt}$, while for the trailing lepton it decreases further, because the effect maximises if both leptons have sizeable \pt. For lepton $|\eta|$, no strong dependence is seen, while for $\Delta R(\ell\ell)$, \rmue seems to decrease towards smaller values (both Figure~\ref{fig:rmueDependenciesApp2}). No significant dependencies are observed for \HT and $N_{\text{Vertex}}$ in Figure~\ref{fig:rmueDependenciesApp3}. 
 \begin{figure}[htbp]
 \centering
 \begin{minipage}[t]{0.49\textwidth}
@@ -53,5 +54,5 @@
 \includegraphics[width=\textwidth]{plots/BG/rmue/rMuE_ZPeakControlForward_Full2012_nVtx_None.pdf}
 \end{minipage}
 \caption{Dependencies of \rmue on $H_T$ (top) and $N_{vertex}$ (bottom) for the central (left) and forward (right) lepton selection. The results on data are shown in black while $t\bar{t}$ simulation is shown in green. The central value is shown as a brown dashed line while the systematic uncertainty is shown as an orange band.}
-\label{fig:rmueDependenciesApp2}
+\label{fig:rmueDependenciesApp3}
 \end{figure} 
