--- a/setup.tex
+++ b/setup.tex
@@ -1,3 +1,4 @@
+\label{sec:setup}
 This analysis relies on data recorded by the CMS experiment at the CERN LHC. Both are highly complex machines and the product of decades of development and construction. Only a short summary can be given here, simplifying many intricate aspects of their designs.
 \section{CERN Large Hadron Collider}
 \input{LHC}
