--- a/tab/table_cutNCount_CrossChecks_central.tex
+++ b/tab/table_cutNCount_CrossChecks_central.tex
@@ -3,45 +3,49 @@
  \renewcommand{\arraystretch}{1.3}
  \setlength{\belowcaptionskip}{6pt}
  \centering
- \caption{Results of the counting experiment in the low-mass central signal region for different variations of the event selection. The observed event yield in SF events is compared with the combined estimate from flavour-symmetric and Drell--Yan backgrounds. The estimate for the Drell--Yan backgrounds is obtained by extrapolating the event yield in the on-\Z signal region after subtraction of flavour-symmetric backgrounds to the low-mass region using the \Routin factor.}
+ \caption{Results of the counting experiment in the low-mass central signal region for different variations of the event selection. The observed event yield in SF events is compared with the combined estimate from flavour-symmetric and Drell--Yan backgrounds. The estimate for the Drell--Yan backgrounds is obtained by extrapolating the event yield in the on-Z signal region after subtraction of flavour-symmetric backgrounds to the low-mass region using the \Routin factor.}
   \label{tab:CountingCrosschecks}
-  \begin{tabular}{l|c|c|c|c}
-                                &  SF        & Flavour-symmetric  &  Drell--Yan  & Observed - Estimates \\ 
+  \begin{tabular}{l|c|c|c|c|c}
+                                &  SF        & Flav-symm.  &  Drell--Yan  & Obs. - Est. & (Obs. - Est.) / $\sigma$\\ 
 
     \hline
     \hline
- & \multicolumn{4}{c}{b-tagging}\\ 
+ & \multicolumn{4}{c}{default selection}\\ 
 \hline 
-        no b-tags       &  202                   & 188.5$\pm$15.4              &  7.1$\pm$2.5            &  6.3$\pm$21.1 \\
-        $\geq$ 1 b-tags       &  663                   & 558.4$\pm$31.0              &  1.9$\pm$0.7            &  102.7$\pm$40.3 \\
+        default       &  865                   & 746$\pm$38              &  8.6$\pm$2.7            &  109$\pm$48 & 2.2 \\
+\hline 
+ & \multicolumn{4}{c}{b tagging}\\ 
+\hline 
+        no b-tagged jets       &  202                   & 188$\pm$15              &  7.1$\pm$2.5            &  6$\pm$21 & 0.3 \\
+        $\geq$ 1 b-tagged jets       &  663                   & 558$\pm$30              &  1.9$\pm$0.7            &  102$\pm$40 & 2.6 \\
 \hline 
  & \multicolumn{4}{c}{lepton \pt requirement} \\ 
 \hline 
-        \pt > 20(10)\GeV       &  1474                   & 1290.2$\pm$58.6              &  11.4$\pm$4.1            &  172.5$\pm$70.1 \\
-        \pt > 30(10)\GeV       &  1262                   & 1114.8$\pm$52.1              &  11.3$\pm$4.1            &  135.9$\pm$63.2 \\
-        \pt > 30(20)\GeV       &  761                   & 674.0$\pm$35.5              &  9.0$\pm$3.3            &  78.0$\pm$45.1 \\
-        \pt > 30\GeV       &  296                   & 275.7$\pm$19.4              &  6.5$\pm$2.3            &  13.8$\pm$26.0 \\
+        \pt > 20(10)\GeV       &  1474                   & 1290$\pm$58              &  11.4$\pm$4.1            &  172$\pm$69 & 2.5 \\
+        \pt > 30(10)\GeV       &  1262                   & 1114$\pm$51              &  11.3$\pm$4.1            &  135$\pm$63 & 2.2 \\
+        \pt > 30(20)\GeV       &  761                   & 673$\pm$35              &  9.0$\pm$3.3            &  78$\pm$45 & 1.7 \\
+        \pt > 30\GeV       &  296                   & 275$\pm$19              &  6.5$\pm$2.3            &  13$\pm$26 & 0.5 \\
 \hline 
  & \multicolumn{4}{c}{tight lepton isolation} \\ 
 \hline 
-        rel. isolation < 0.05       &  572                   & 491.5$\pm$28.4              &  7.1$\pm$2.6            &  73.3$\pm$37.2 \\
+        $\frac{\text{Iso}}{\pt}$ < 0.05       &  572                   & 491$\pm$28              &  7.1$\pm$2.6            &  73$\pm$37 & 2.0 \\
 \hline 
  & \multicolumn{4}{c}{pileup} \\ 
 \hline 
-        $N_{\text{vtx}} <$ 13       &  332                   & 289.9$\pm$20.0              &  3.3$\pm$1.2            &  38.8$\pm$27.1 \\
-        13 $\leq N_{\text{vtx}}$ < 17       &  242                   & 212.8$\pm$16.5              &  0.9$\pm$0.3            &  28.3$\pm$22.7 \\
-        $N_{\text{vtx}} \geq$ 17       &  291                   & 244.2$\pm$18.0              &  4.8$\pm$1.7            &  41.9$\pm$24.8 \\
+        $N_{\text{vtx}} <$ 13       &  332                   & 289$\pm$19              &  3.3$\pm$1.2            &  38$\pm$27 & 1.4 \\
+        13 $\leq N_{\text{vtx}}$ < 17       &  242                   & 212$\pm$16              &  0.9$\pm$0.3            &  28$\pm$22 & 1.2 \\
+        $N_{\text{vtx}} \geq$ 17       &  291                   & 244$\pm$17              &  4.8$\pm$1.7            &  41$\pm$24 & 1.7 \\
 \hline 
  & \multicolumn{4}{c}{\MET reconstructions}\\
 \hline 
-        type I corrected PF \MET       &  1034                   & 923.3$\pm$45.0              &  9.4$\pm$3.4            &  101.3$\pm$55.4 \\
-        track corrected \MET       &  850                   & 702.3$\pm$36.6              &  26.3$\pm$9.4            &  121.3$\pm$47.7 \\
-        missing $H_{\mathrm{T}}$       &  1171                   & 942.5$\pm$45.7              &  50.8$\pm$18.1            &  177.6$\pm$59.9 \\
+        type-I corrected PF \MET       &  1034                   & 923$\pm$44              &  9.4$\pm$3.4            &  101$\pm$55 & 1.8 \\
+        TC \MET       &  850                   & 702$\pm$36              &  26.3$\pm$9.4            &  121$\pm$47 & 2.5 \\
+        $H_{\mathrm{T}}^{\mathrm{miss}}$       &  1171                   & 942$\pm$45              &  50.8$\pm$18.1            &  177$\pm$59 & 3.0 \\
 \hline 
  & \multicolumn{4}{c}{$H_{\mathrm{T}}$}\\
 \hline 
-        100\GeV $< H_{\mathrm{T}} < $ 300\GeV        &  455                   & 401.3$\pm$24.7              &  1.4$\pm$0.5            &  52.3$\pm$32.7 \\
-        $H_{\mathrm{T}} > $ 300\GeV        &  410                   & 344.6$\pm$22.4              &  7.5$\pm$2.7            &  57.9$\pm$30.3 \\
+        100\GeV $< H_{\mathrm{T}} < $ 300\GeV        &  455                   & 401$\pm$24              &  1.4$\pm$0.5            &  52$\pm$32 & 1.6 \\
+        $H_{\mathrm{T}} > $ 300\GeV        &  410                   & 344$\pm$22              &  7.5$\pm$2.7            &  57$\pm$30 & 1.9 \\
 \hline 
 
 
