--- a/tab/table_cutNCount_Result_EE.tex
+++ b/tab/table_cutNCount_Result_EE.tex
@@ -6,7 +6,6 @@
  \centering
  \caption{Results of the counting experiment for \EE events only.
      The statistical and systematic uncertainties are added in quadrature, except for the flavor-symmetric backgrounds.
-     Low-mass refers to $20 < \mll < 70$\GeV, on-\Z to  $81 < \mll < 101$\GeV, and high-mass to $\mll > 120$\GeV.
      }
   \label{tab:METresults2012EE}
   \begin{tabular}{l| cc | cc | cc}
@@ -28,7 +27,7 @@
             Total estimated          & $342\pm23$            & $62\pm8$      & $229\pm17$ & $79\pm9$ & $358\pm24$ & $175\pm19$ \\
 
     \hline
-         Observed - estimated  & $47^{+25}_{-25}$      & $-10^{+9}_{-9}$ & $3^{+21}_{-21} $ & $6^{+12}_{-12}$ & $42^{+25}_{-26}$ & $19^{+18}_{-18} $ \\ 
+         Observed - estimated  & $47\pm25$      & $-10\pm9$ & $3\pm21 $ & $6\pm12$ & $42\pm26$ & $19\pm18 $ \\ 
 
     \hline
    Significance      & 1.9~$\sigma$    &  $<$0.1~$\sigma$  & 0.1~$\sigma$ & 0.5~$\sigma$ & 1.7~$\sigma$ & 1.1~$\sigma$ \\ 
