--- a/tab/table_cutNCount_Result_MM.tex
+++ b/tab/table_cutNCount_Result_MM.tex
@@ -6,7 +6,6 @@
  \centering
  \caption{Results of the counting experiment for \MM events only.
      The statistical and systematic uncertainties are added in quadrature, except for the flavor-symmetric backgrounds.
-     Low-mass refers to $20 < \mll < 70$\GeV, on-\Z to  $81 < \mll < 101$\GeV, and high-mass to $\mll > 120$\GeV.
      }
   \label{tab:METresults2012MM}
   \begin{tabular}{l| cc | cc | cc}
@@ -28,7 +27,7 @@
             Total estimated          & $409\pm26$            & $80\pm9$      & $258\pm18$ & $100\pm11$ & $429\pm27$ & $225\pm22$ \\
 
     \hline
-         Observed - estimated  & $67^{+29}_{-29}$      & $20^{+13}_{-13}$ & $3^{+22}_{-23} $ & $-11^{+13}_{-13}$ & $19^{+29}_{-29}$ & $-40^{+21}_{-21} $ \\ 
+         Observed - estimated  & $67\pm29$      & $20\pm13$ & $3\pm23 $ & $-11\pm13$ & $19\pm29$ & $-40\pm21 $ \\ 
 
     \hline
    Significance      & 2.3~$\sigma$    &  1.6~$\sigma$  & 0.2~$\sigma$ & $<$0.1~$\sigma$ & 0.6~$\sigma$ & $<$0.1~$\sigma$ \\ 
