--- a/tab/table_cutNCount_ZBkgs.tex
+++ b/tab/table_cutNCount_ZBkgs.tex
@@ -6,44 +6,44 @@
   \begin{tabular}{l|cc|c}
 
                                     & \multicolumn{3}{c}{\central}            \\
-                                    & \EE                   & \MM                   & SF          \\
+   Drell--Yan estimate                     & \EE                   & \MM                   & SF          \\
    \hline
-   Drell--Yan (\JZB)                  & $57.9\pm13.8\pm10.1$   & $46.1\pm13.8\pm8.0$          &    $104\pm21\pm18$  \\
+   on-\Z (\JZB)                  & $57.9\pm13.8\pm10.1$   & $46.1\pm13.8\pm8.0$          &    $104\pm21\pm18$  \\
    
-   Drell--Yan  (\MET templates) & $63.2\pm 4.3\pm 15.3$    & $69.5\pm 4.0\pm 16.9$       &    $133\pm7\pm32$  \\
-   Drell--Yan  (Combined)         & $60.7\pm 11.6$                & $56.8\pm 11.7$                   &    $116\pm21$  \\
+   on-\Z  (\MET templates) & $63.2\pm 4.3\pm 15.3$    & $69.5\pm 4.0\pm 16.9$       &    $133\pm7\pm32$  \\
+   on-\Z  (Combined)         & $60.7\pm 11.6$                & $56.8\pm 11.7$                   &    $116\pm21$  \\
    \hline
        \Routin low-mass       &  0.069$\pm$0.001$\pm$0.017                   & 0.075$\pm$0.001$\pm$0.019            &  0.072$\pm$0.001$\pm$0.018    \\
  
    \hline
-     low-mass estimate    & 4.3$\pm$1.3        & 4.4$\pm$1.4  &  8.6$\pm$2.7 \\
+     low-mass    & 4.3$\pm$1.3        & 4.4$\pm$1.4  &  8.6$\pm$2.7 \\
 
    \hline
        \Routin high-mass       &  0.025$\pm$0.001$\pm$0.006                   & 0.020$\pm$0.001$\pm$0.005            &  0.022$\pm$0.001$\pm$0.006    \\
  
    \hline
-     high-mass estimate    & 1.5$\pm$0.5        & 1.2$\pm$0.4  &  2.7$\pm$0.8 \\
+     high-mass    & 1.5$\pm$0.5        & 1.2$\pm$0.4  &  2.7$\pm$0.8 \\
   
    \hline
                                     & \multicolumn{3}{c}{\forward} \\
-                                    & \EE                  & \MM                        & SF \\
+    Drell--Yan estimate                      & \EE                  & \MM                        & SF \\
    \hline
-   Drell--Yan  (\JZB)                   & $15.6\pm 8.3\pm 2.9$ & $13.8 \pm 8.3\pm 2.8$       & $29\pm11\pm6$ \\
-   Drell--Yan  (MET templates)          & $24.4\pm 1.8\pm 6.0$ & $32.3\pm 2.2\pm 7.9$       & $56.9\pm3.6\pm14.0$ \\
-   Drell--Yan  (Combined)          & $21\pm 5$        & $25\pm 6$             & $42\pm 9$  \\
+   on-\Z  (\JZB)                   & $15.6\pm 8.3\pm 2.9$ & $13.8 \pm 8.3\pm 2.8$       & $29\pm11\pm6$ \\
+   on-\Z  (MET templates)          & $24.4\pm 1.8\pm 6.0$ & $32.3\pm 2.2\pm 7.9$       & $56.9\pm3.6\pm14.0$ \\
+   on-\Z  (Combined)          & $21\pm 5$        & $25\pm 6$             & $42\pm 9$  \\
 
    \hline
        \Routin low-mass       &  0.055$\pm$0.001$\pm$0.014                   & 0.064$\pm$0.001$\pm$0.016            &  0.060$\pm$0.001$\pm$0.015    \\
 
    \hline
-     low-mass estimate    & 1.2$\pm$0.4        & 1.6$\pm$0.6  &  2.6$\pm$0.8 \\
+     low-mass    & 1.2$\pm$0.4        & 1.6$\pm$0.6  &  2.6$\pm$0.8 \\
 
 
    \hline
        \Routin high-mass       &  0.031$\pm$0.001$\pm$0.008                   & 0.026$\pm$0.001$\pm$0.007            &  0.028$\pm$0.001$\pm$0.007    \\
 
    \hline
-     high-mass estimate    & 0.7$\pm$0.2        & 0.7$\pm$0.2  &  1.2$\pm$0.4 \\
+     high-mass    & 0.7$\pm$0.2        & 0.7$\pm$0.2  &  1.2$\pm$0.4 \\
 
 
  \end{tabular}
