--- a/tab/table_factorization_result.tex
+++ b/tab/table_factorization_result.tex
@@ -3,9 +3,8 @@
  \renewcommand{\arraystretch}{1.3}
  \setlength{\belowcaptionskip}{6pt}
  \centering
- \caption{
-     }
-  \label{tab:factorization}
+ \caption{Result of the determination of \Rsfof, \Reeof, and \Rmmof using the factorisation method.}
+  \label{tab:factorisation}
   \begin{tabular}{l| c c| c c }
 
     & \multicolumn{2}{c}{Central} & \multicolumn{2}{c}{Forward} \\ 
