--- a/tab/table_fit_comparison.tex
+++ b/tab/table_fit_comparison.tex
@@ -3,7 +3,7 @@
  \renewcommand{\arraystretch}{1.3}
  \setlength{\belowcaptionskip}{6pt}
  \centering
- \caption{Comparison of edge fit results in the signal region for different parametrizations of the flavour-symmetric background. Results are given for the central signal region only. Similar agreement between the parametrization is also observed in the forward signal region.
+ \caption{Comparison of edge fit results in the signal region for different parametrisations of the flavour-symmetric background. Results are given for the central signal region only. Similar agreement between the parametrisations is also observed in the forward signal region.
      }
   \label{tab:fitComparison}
   \begin{tabular}{l| c c c c c c }
