--- a/tab/table_nonPrompt.tex
+++ b/tab/table_nonPrompt.tex
@@ -2,7 +2,7 @@
 \begin{table}[!htbp]
  \renewcommand{\arraystretch}{1.2}
  \begin{center}
-  \caption{Results of the estimation of backgrounds with non-prompt leptons using the tight-to-loose ratio.}
+  \caption{Results of the estimation of backgrounds with non-prompt leptons in the signal region using the tight-to-loose ratios for prompt and non-prompt leptons. The total non-prompt estimate is given by the sum of the contributions for events with one or two non-prompt leptons $N_{pp}$, $N_{np}$, and $N_{pn}$.}
   \begin{tabular}{l|ccccc}
 
                                     & \EE & \MM & SF & \EM          \\
@@ -14,7 +14,7 @@
        $N_{ll}$      &  11  & 114 & 125  & 50             \\
 
 \hline
-       Non-prompt estimate      &  44.9$\pm$14.8$\pm$44.9  & 34.6$\pm$3.8$\pm$34.6 & 79.6$\pm$18.6$\pm$79.6  & 86.7$\pm$12.4$\pm$86.7             \\
+       Non-prompt estimate      &  44.9$\pm$14.8  & 34.6$\pm$3.8 & 79.6$\pm$18.6  & 86.7$\pm$12.4             \\
 
 \hline
 \hline
@@ -26,7 +26,7 @@
        $N_{ll}$      &  6  & 38 & 44  & 32             \\
 
 \hline
-       Non-prompt estimate      &  27.3$\pm$8.0$\pm$27.3  & 17.9$\pm$3.5$\pm$17.9 & 45.1$\pm$11.5$\pm$45.1  & 43.4$\pm$8.4$\pm$43.4             \\
+       Non-prompt estimate      &  27.3$\pm$8.0  & 17.9$\pm$3.5 & 45.1$\pm$11.5  & 43.4$\pm$8.4             \\
 
  \end{tabular}
  \label{tab:nonPromptTable}
