--- a/tab/table_rSFOF_combination_result.tex
+++ b/tab/table_rSFOF_combination_result.tex
@@ -3,7 +3,7 @@
  \renewcommand{\arraystretch}{1.3}
  \setlength{\belowcaptionskip}{6pt}
  \centering
- \caption{Correction factors \Rsfof, \Reeof, and \Rmmof determined from direct measurement and the factorization method together with the weighted averages.}
+ \caption{Correction factors \Rsfof, \Reeof, and \Rmmof determined from direct measurement and the factorisation method together with the weighted averages.}
   \label{tab:combinedRSFOF}
   \begin{tabular}{l| c c| c c }
     & \multicolumn{4}{c}{\Rsfof}  \\ 
@@ -14,7 +14,7 @@
     & Data & MC & Data & MC \\ 
 
     \hline
-        from factorization method       &  1.029$\pm$0.067  &  1.031$\pm$0.067      &  1.099$\pm$0.088 &   1.103$\pm$0.091    \\
+        from factorisation method       &  1.029$\pm$0.067  &  1.031$\pm$0.067      &  1.099$\pm$0.088 &   1.103$\pm$0.091    \\
         from direct measurement       &  1.007$\pm$0.043  &  1.034$\pm$0.015      &  1.015$\pm$0.106 &   1.092$\pm$0.026    \\
         weighted avarage       &  1.013$\pm$0.036  &  1.033$\pm$0.014      &  1.048$\pm$0.055 &   1.093$\pm$0.025    \\
 
@@ -27,7 +27,7 @@
     & Data & MC & Data & MC \\ 
 
     \hline
-        from factorization method       &  0.471$\pm$0.116  &  0.465$\pm$0.117      &  0.458$\pm$0.259 &   0.449$\pm$0.264    \\
+        from factorisation method       &  0.471$\pm$0.116  &  0.465$\pm$0.117      &  0.458$\pm$0.259 &   0.449$\pm$0.264    \\
         from direct measurement       &  0.458$\pm$0.033  &  0.467$\pm$0.008      &  0.445$\pm$0.092 &   0.460$\pm$0.014    \\
         weighted avarage       &  0.459$\pm$0.027  &  0.467$\pm$0.008      &  0.445$\pm$0.044 &   0.460$\pm$0.014    \\
 
@@ -40,7 +40,7 @@
     & Data & MC & Data & MC \\ 
 
     \hline
-        from factorization method       &  0.558$\pm$0.117  &  0.565$\pm$0.119      &  0.641$\pm$0.261 &   0.654$\pm$0.266    \\
+        from factorisation method       &  0.558$\pm$0.117  &  0.565$\pm$0.119      &  0.641$\pm$0.261 &   0.654$\pm$0.266    \\
         from direct measurement       &  0.549$\pm$0.035  &  0.567$\pm$0.010      &  0.570$\pm$0.095 &   0.632$\pm$0.018    \\
         weighted avarage       &  0.550$\pm$0.029  &  0.567$\pm$0.010      &  0.572$\pm$0.049 &   0.632$\pm$0.018    \\
 
